--- a/src/app/components/menu/administrador/consulta/consulta.component.html
+++ b/src/app/components/menu/administrador/consulta/consulta.component.html
@@ -58,7 +58,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumnsProyecto"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumnsProyecto;"></tr>
           </table>
-          <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+          <mat-paginator #paginatorProyecto [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
         </section>
       </mat-tab>
       <mat-tab label="Productos">
@@ -118,7 +118,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsProducto"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumnsProducto;"></tr>
             </table>
-            <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+            <mat-paginator #paginatorProducto [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
           </section>
       </mat-tab>
       <mat-tab label="Investigadores">
@@ -130,7 +130,7 @@
                   <button matTooltip="Descarga general" matTooltipPosition="above" style="float: right;right: 25px;" mat-fab color="warn" (click)="exportAsXLSX(undefined,'Investigadores')" aria-label="Example icon button with a delete icon">
                     <mat-icon>expand_circle_down</mat-icon>
                   </button>
-                  <button matTooltip="Estados" matTooltipPosition="above" style="float: right;right: 35px;top:8px" mat-mini-fab color="warn" (click)="openDialogoEstadistica(investigadoresData,'Investigadores',false)" aria-label="Example icon button with a delete icon">
+                  <button matTooltip="Roles" matTooltipPosition="above" style="float: right;right: 35px;top:8px" mat-mini-fab color="warn" (click)="openDialogoEstadistica(investigadoresData,'Investigadores',false)" aria-label="Example icon button with a delete icon">
                     <mat-icon>data_usage</mat-icon>
                   </button>
                 </div>
@@ -176,7 +176,7 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumnsInvestigador"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumnsInvestigador;"></tr>
           </table>
-          <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+          <mat-paginator #paginatorInvestigador [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
         </section>
     </mat-tab>
   </mat-tab-group>
