--- a/src/app/components/menu/administrador/consulta/dialogo-estadistica/dialogo-estadistica.component.html
+++ b/src/app/components/menu/administrador/consulta/dialogo-estadistica/dialogo-estadistica.component.html
@@ -1,7 +1,11 @@
 <mat-dialog-content class="mat-typography">
     <div class="example-container">
-        <div class="main-div">
-            <canvas id="chartGeneral" style="max-width:300px; max-height:300px">{{ chartGeneral }}</canvas>
+        <div 
+            matRipple
+            [matRippleRadius]="70"
+            [matRippleUnbounded]="true"
+            class="main-div">
+            <canvas id="chartGeneral" style="max-width:100%; max-height:100%">{{ chartGeneral }}</canvas>
         </div>
     </div>
 </mat-dialog-content>
