--- a/src/app/components/menu/administrador/control/control.component.html
+++ b/src/app/components/menu/administrador/control/control.component.html
@@ -39,6 +39,7 @@
                     <tr mat-header-row *matHeaderRowDef="['nombre', 'rolinvestigador', 'estado','updated_at','created_at']; sticky: true"></tr>
                     <tr mat-row *matRowDef="let usuario; columns: ['nombre', 'rolinvestigador', 'estado','updated_at','created_at'];"></tr>
                 </table>
+                <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
             </section>
         </mat-tab>
         <mat-tab label="Proyectos">
@@ -81,6 +82,9 @@
                     <ng-container matColumnDef="accion">
                         <th mat-header-cell *matHeaderCellDef> Acción </th>
                         <td mat-cell *matCellDef="let proyecto">
+                            <button  matTooltip="Detalle" matTooltipPosition="above" mat-icon-button color="accent" (click)="openDialogoDetalle(proyecto, 'Proyecto')">
+                                <mat-icon>info</mat-icon>
+                            </button>
                             <button  matTooltip="Tramitar" matTooltipPosition="above" mat-icon-button color="primary" (click)="openDialogoTramite(proyecto, 'Proyecto')">
                                 <mat-icon>check_circle</mat-icon>
                             </button>
@@ -117,6 +121,7 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumnsProyecto;"></tr>
                     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                 </table>
+                <mat-paginator #paginatorProyecto [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
             </section>
         </mat-tab>
         <mat-tab label="Productos">
@@ -158,7 +163,10 @@
                     <ng-container matColumnDef="accion">
                         <th mat-header-cell *matHeaderCellDef> Acción </th>
                         <td mat-cell *matCellDef="let producto">
-                            <button  matTooltip="Tramitar" matTooltipPosition="above" mat-icon-button color="primary" (click)="openDialogoTramite(producto, 'Producto')">
+                            <button  matTooltip="Detalle" matTooltipPosition="above" mat-icon-button color="accent" (click)="openDialogoDetalle(producto, 'producto')">
+                                <mat-icon>info</mat-icon>
+                            </button>
+                            <button  matTooltip="Tramitar" matTooltipPosition="above" mat-icon-button color="primary" (click)="openDialogoTramite(producto, 'producto')">
                                 <mat-icon>check_circle</mat-icon>
                             </button>
                         </td>
@@ -194,6 +202,7 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumnsProducto;"></tr>
                     <tr mat-row *matRowDef="let row; columns: ['expandedDetailProducto']" class="example-detail-row"></tr>
                 </table>
+                <mat-paginator #paginatorProducto [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
             </section>
         </mat-tab>
     </mat-tab-group>
