--- a/src/app/components/menu/investigadores/proyectos/proyectos.component.html
+++ b/src/app/components/menu/investigadores/proyectos/proyectos.component.html
@@ -18,21 +18,18 @@
         
           <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.fecha | date}} </td>
           </ng-container>
         
-          <!--
-            <ng-container matColumnDef="etapa">
-              <th mat-header-cell *matHeaderCellDef> Etapa </th>
-              <td mat-cell *matCellDef="let element" matTooltip="{{element.observacion}}" matTooltipPosition="above"> {{element.etapa}} </td>
-            </ng-container>
-
-          -->
           <ng-container matColumnDef="estado">
             <th mat-header-cell *matHeaderCellDef> Estado </th>
             <td mat-cell *matCellDef="let element"> {{element.estadoProceso}} </td>
           </ng-container>
         
+          <ng-container matColumnDef="etapa">
+            <th mat-header-cell *matHeaderCellDef> Etapa </th>
+            <td mat-cell *matCellDef="let element" matTooltip="{{element.observacion}}" matTooltipPosition="above"> {{element.etapa}} </td>
+          </ng-container>
         
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> Acciones</th>
