--- a/src/app/components/menu/investigadores/proyectos/proyectos.component.html
+++ b/src/app/components/menu/investigadores/proyectos/proyectos.component.html
@@ -1417,7 +1417,7 @@
               </mat-tab-group>
             </div>
             
-            <button class="anchoGuardar" mat-raised-button style="background-color: #6AABA0;" (click)="guardarProducto()">Guardar2</button>
+            <button class="anchoGuardar" mat-raised-button style="background-color: #6AABA0;" (click)="guardarProducto()">Guardar</button>
           </form>
         </mat-tab>
       </mat-tab-group>
