--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -89,8 +89,9 @@
                 <form [formGroup]="miFormulario">
                   <mat-form-field class="form-field-spacing" appearance="fill">
                     <input type="email" matInput autocomplete="off" formControlName="correo">
-                    <mat-error *ngIf="miFormulario.get('correo')?.hasError('pattern')">
-                      Por favor, introduce un correo electrónico válido de @unbosque.edu.c
+                    <mat-error *ngIf="miFormulario.get('correo')?.hasError('pattern')"> 
+                      Por favor, introduce un correo electrónico válido de &#64;unbosque.edu.c
+
                     </mat-error>
                   </mat-form-field>
                 </form>
