--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -43,10 +43,20 @@
           
               <p>
                 <mat-icon>fingerprint</mat-icon>
+                Objetivos: Desarrollar proyectos de investigación y desarrollo tecnológico interdisciplinarios en las áreas de ingeniería de los sistemas de información, del desarrollo sostenible y del uso de medios técnico-tecnológicos, con el objetivo de aportar al mejoramiento de la salud y calidad de vida de las comunidades involucradas, en procesos educativos, organizacionales y de salud, desde la perspectiva multicausal dada por el modelo biopsicosocial y cultural.
               </p>
           
               <p>
                 <mat-icon>menu_book</mat-icon>
+                Líneas de Investigación:
+
+                Ingeniería de software y sociedad.
+
+                Ingeniería para la salud y el desarrollo biológico
+
+                Ingeniería y educación
+
+                Ingeniería para la sostenibilidad de sistemas naturales
               </p>
             </div>
           </div>
@@ -62,11 +72,11 @@
                 </mat-expansion-panel-header>
           
                 <div>
-                  <img [src]="user.imagen_url" alt="Imagen del investigador">
+                  
                 </div>
           
                 <p>{{ user.correo }}</p>
-                <p>{{ user.grupoinvestigacion }}</p>
+
               </mat-expansion-panel>
             </mat-accordion>
           </mat-tab>
