--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -118,7 +118,13 @@
                 <mat-form-field class="form-field-spacing2" appearance="fill">
                   <mat-label>Numero de documento</mat-label>
                   <input type="number" matInput autocomplete="off" formControlName="numerodocumento">
-                </mat-form-field>
+                  <mat-error *ngIf="registroForm.get('numerodocumento')?.hasError('pattern')"> 
+                    Por favor, introduce un número de documento válido
+                  </mat-error>
+                  <mat-error *ngIf="registroForm.get('numerodocumento')?.hasError('minlength')"> 
+                    El número de documento debe tener al menos 8 dígitos
+                  </mat-error>
+                </mat-form-field>                
               </div>
               <div class="titulo">
                 <p>Contraseña</p>
