--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -117,7 +117,7 @@
                 </mat-form-field>
                 <mat-form-field class="form-field-spacing2" appearance="fill">
                   <mat-label>Numero de documento</mat-label>
-                  <input type="number" matInput autocomplete="off" formControlName="numerodocumento">
+                  <input  matInput autocomplete="off" formControlName="numerodocumento">
                   <mat-error *ngIf="registroForm.get('numerodocumento')?.hasError('pattern')"> 
                     Por favor, introduce un número de documento válido
                   </mat-error>
