--- a/src/app/components/menu/navbar/navbar.component.html
+++ b/src/app/components/menu/navbar/navbar.component.html
@@ -131,6 +131,9 @@
                 <mat-form-field class="form-field-spacing2" appearance="fill">
                   <mat-label>Contraseña</mat-label>
                   <input matInput [type]="hide ? 'password' : 'text'" formControlName="contrasena">
+                  <mat-error *ngIf="registroForm.get('numerodocumento')?.hasError('minlength')"> 
+                    Por favor introducir una contraseña con al menos 8 dígitos
+                  </mat-error>
                   <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>
