--- a/src/app/components/menu/administrador/consulta/consulta.component.html
+++ b/src/app/components/menu/administrador/consulta/consulta.component.html
@@ -130,7 +130,7 @@
                   <button matTooltip="Descarga general" matTooltipPosition="above" style="float: right;right: 25px;" mat-fab color="warn" (click)="exportAsXLSX(undefined,'Investigadores')" aria-label="Example icon button with a delete icon">
                     <mat-icon>expand_circle_down</mat-icon>
                   </button>
-                  <button matTooltip="Estado" matTooltipPosition="above" style="float: right;right: 35px;top:8px" mat-mini-fab color="warn" (click)="openDialogoEstadistica(investigadoresData,'Investigadores',false)" aria-label="Example icon button with a delete icon">
+                  <button matTooltip="Roles" matTooltipPosition="above" style="float: right;right: 35px;top:8px" mat-mini-fab color="warn" (click)="openDialogoEstadistica(investigadoresData,'Investigadores',false)" aria-label="Example icon button with a delete icon">
                     <mat-icon>data_usage</mat-icon>
                   </button>
                 </div>
