--- a/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
+++ b/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
@@ -14,7 +14,7 @@
             <input matInput [disabled]="true" formControlName="ss">
         </mat-form-field>
         <mat-form-field class="">
-            <input matInput [disabled]="true" formControlName="dd">
+            <input matInput [disabled]="true" formControlName="aa">
         </mat-form-field>
         <mat-form-field class="">
             <mat-label>Nombres</mat-label>
