--- a/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
+++ b/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
@@ -4,10 +4,9 @@
 
 <form class="example-form" [formGroup]="firstFormGroup">
  
-    <!-- Información Personal -->
-    <h2>Información Personal</h2>
-    <div class="personal-info">
-        <mat-form-field class="">
+    <!-- Información Personal 
+    
+    <mat-form-field class="">
             <input matInput [disabled]="true" formControlName="dd">
         </mat-form-field>
         <mat-form-field class="">
@@ -16,6 +15,10 @@
         <mat-form-field class="">
             <input matInput [disabled]="true" formControlName="aa">
         </mat-form-field>
+    
+    -->
+    <h2>Información Personal</h2>
+    <div class="personal-info">
         <mat-form-field class="">
             <mat-label>Nombres</mat-label>
             <input matInput formControlName="nombre">
