--- a/src/app/components/menu/investigadores/proyectos/proyectos.component.html
+++ b/src/app/components/menu/investigadores/proyectos/proyectos.component.html
@@ -18,7 +18,7 @@
         
           <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{element.fecha | date}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
           </ng-container>
         
           <ng-container matColumnDef="estado">
@@ -35,11 +35,11 @@
             <th mat-header-cell *matHeaderCellDef> Acciones</th>
             <td mat-cell *matCellDef="let element">
               <!-- Botones de acción -->
-              <button mat-icon-button color="primary" matTooltip="Editar" matTooltipPosition="above" (click)="openDialogoDetalle(element, element.tipo,true)">
+              <button mat-icon-button color="primary" (click)="accionUno(element)">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button color="accent"  matTooltip="Detalle" matTooltipPosition="above" (click)="openDialogoDetalle(element, element.tipo,false)">
-                <mat-icon>info</mat-icon>
+              <button mat-icon-button color="black" (click)="accionDos(element)">
+                <mat-icon>visibility</mat-icon>
               </button>
               <button mat-icon-button color="warn" [disabled]="element.estadoProceso == 'Aprobado' ? false : true " matTooltip="Configurar Entregables" matTooltipPosition="above" (click)="openDialogoConfiguracionEntregable(element,element.tipo)">
                 <mat-icon>settings</mat-icon>
