--- a/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
+++ b/src/app/components/menu/administrador/perfil-administrador/perfil-administrador.component.html
@@ -4,11 +4,7 @@
 
 <form class="example-form" [formGroup]="firstFormGroup">
  
-    <!-- Información Personal 
-    
-    
-    
-    -->
+    <!-- Información Personal -->
     <h2>Información Personal</h2>
     <div class="personal-info">
         <mat-form-field class="">
@@ -18,7 +14,7 @@
             <input matInput [disabled]="true" formControlName="ss">
         </mat-form-field>
         <mat-form-field class="">
-            <input matInput [disabled]="true" formControlName="aa">
+            <input matInput [disabled]="true" formControlName="dd">
         </mat-form-field>
         <mat-form-field class="">
             <mat-label>Nombres</mat-label>
